@@ -41,6 +41,9 @@ S3method(MakeAccessibleSVG,default)
 S3method(plot,fittedlineplot)
 S3method(plot,scatterplot)
 S3method(plot,tsplot)
+S3method(print,fittedlineplot)
+S3method(print,scatterplot)
+S3method(print,tsplot)
 S3method(print,wordlist)
 S3method(SVGThis,default)
   S3method(SVGThis,boxplot)
